fixed overflow hiding (fixed nav caused this issue)

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -6855,7 +6855,7 @@ img.mfp-img {
       transition: all 0.5s ease; }
 
 /*RESET*/
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, .nav-header, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {
   margin: 0;
   padding: 0;
   border: 0;
@@ -6894,15 +6894,12 @@ table {
   background: #FFFFFF;
   width: 100%;
   height: 76px;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   border-top: 5px solid #40c4c6;
   border-bottom: 1px solid #e2e2e2;
   z-index: 100; }
-  @media (min-width: 768px) {
-    #nav-container {
-      position: absolute; } }
 
 #logo {
   margin: 20px;
